# poi

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  build-linux-x64.sh  compile-linux-x64.sh  daemon.sh  docker-compose.yml  poi.cabal  poi.conf.example  poi.conf.sample  setup-ubuntu.sh  stack.yaml
app/: Main.hs
conf/: supervisord.conf
init/: poi-daemon.ini  poi_daemon.service
poi/: Dockerfile  Main.hs  app.rb  build.sh  poi.cabal  stack.yaml
poi/app/: Main.hs
poi/src/: Deploy.hs  Lib.hs  Sh.hs  Webhook.hs
poi_ruby/: app.rb
setup/: ubuntu.sh
shadowsocks/: Dockerfile  shadowsocks.sh
src/: Config.hs  Daemon.hs  Deploy.hs  Email.hs  EmailLog.hs  Lib.hs  Logger.hs  Option.hs  Status.hs  TextCollector.hs  Util.hs  Webhook.hs
