name:                poi
version:             0.1.0.0
synopsis:            poi daemon
description:         Please see README.md
homepage:            http://github.com/shouya/poi
license:             BSD3
license-file:        LICENSE
author:              Shou Ya
maintainer:          shouyatf@gmail.com
copyright:           2015 Shou Ya
category:            Network
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Deploy
                     , Webhook
                     , Config
                     , Option
                     , TextCollector
                     , EmailLog
  build-depends:       base >= 4.7
                     , network
                     , bytestring
                     , text
                     , shelly
                     , time
                     , directory
                     , ConfigFile
                     , optparse-applicative
                     , hailgun
  default-language:    Haskell2010

executable poi-exe
  hs-source-dirs:      app
  main-is:             Main.hs
--  ld-options:          -static -pthread
  build-depends:       base
                     , poi
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/shouya/poi

